# cython

./: CHANGES.rst  MANIFEST.in  cygdb.py  cython.py  cythonize.py  pyproject.toml  runtests.py  setup.cfg  setup.py  test-requirements-312.txt  tox.ini
.github/workflows/: ci.yml  wheels.yml
Cython/: CodeWriter.py  Coverage.py  Debugging.py  Shadow.py  Shadow.pyi  StringIOTree.pxd  StringIOTree.py  TestUtils.py  Utils.py
Cython/Compiler/: Builtin.py  Code.pxd  Code.py  Dataclass.py  Errors.py  ExprNodes.py  FlowControl.pxd  FlowControl.py  FusedNode.py  Lexicon.py  Main.py  MatchCaseNodes.py  MemoryView.py  ModuleNode.py  Nodes.py  Optimize.py  Options.py  ParseTreeTransforms.pxd  ParseTreeTransforms.py  Parsing.pxd  Parsing.py  Pipeline.py  PyrexTypes.py  Pythran.py  Scanning.pxd  Scanning.py  StringEncoding.py  Symtab.py  TypeInference.py  TypeSlots.py  UtilityCode.py  Visitor.pxd  Visitor.py
Cython/Debugger/: Cygdb.py  libcython.py  libpython.py
Cython/Distutils/: build_ext.py  extension.py  old_build_ext.py
Cython/Includes/: cpython.pxd  libc.pxd  libcpp.pxd  openmp.pxd  posix.pxd
Cython/Parser/: ConcreteSyntaxTree.pyx
Cython/Plex/: Actions.pxd  DFA.pxd  Machines.pxd  Machines.py  Scanners.pxd  Scanners.py  Transitions.pxd
Cython/Runtime/: refnanny.pyx
Cython/Tempita/: _tempita.py
Cython/Tests/: TestCodeWriter.py  TestCythonUtils.py  TestJediTyper.py  TestStringIOTree.py
Cython/Utility/: AsyncGen.c  Buffer.c  CConvert.pyx  CpdefEnums.pyx  CppConvert.pyx  Dataclasses.c  Dataclasses.py  Exceptions.c  FunctionArguments.c  MatchCase.c  MemoryView.pyx  ObjectHandling.c  TestCyUtilityLoader.pyx  TestCythonScope.pyx  UFuncs.pyx  arrayarray.h
Demos/: integrate1.pyx  integrate2.pyx  numpy_demo.pyx  overflow_perf.pyx  overflow_perf_run.py  primes.pyx  setup.py  spam.pyx
Demos/benchmarks/: bpnn3.pxd  bpnn3.py  chaos.pxd  coroutines.py  generators.py  hexiom2.pxd  hexiom2.py  meteor_contest.pxd  meteor_contest.py  nbody.pxd  nbody.py  nqueens.py  richards.pxd  setup.py  spectralnorm.pxd  util.py
Demos/callback/: Setup.py  cheese.pyx
Demos/freeze/: combinatorics.pyx  lcmath.pyx
Demos/libraries/: call_mymath.pyx  setup.py
Tools/: cevaltrace.py  ci-run.sh  cystdlib.py  cython-epydoc.py  dump_github_issues.py  gen_tests_for_posix_pxds.py  make_dataclass_tests.py
Tools/dataclass_test_data/: test_dataclasses.py
docs/: conf.py
pyximport/: _pyximport2.py  _pyximport3.py  pyximport.py
tests/broken/: big_t.pyx  builtinconst.pyx  builtindict.pyx  cascadedass.pyx  cexportfunc.pyx  cimport.pyx  cimportfrom.pyx  cimportfrompkgdir.pyx  cimportfunc.pyx  ctypedefextern.pyx  externfunc.pyx  externsue.pyx  fwddeclcclass.pyx  getattr.pyx  getattr3ref.pyx  i_public.pyx  intindex.pyx  l_capi.pyx  l_cfuncexport.pyx  naanou_1.pyx  pkg.cimport.pyx  pkg.cimportfrom.pyx  plex2.pyx  r_capi.pyx  r_cfuncimport.pyx  r_excval.pyx  r_extimpinherit.pyx  r_extinherit.pyx  r_extmember.pyx  r_extnumeric2.pyx  r_extproperty.pyx  r_extweakref.pyx  r_inhcmethcall.pyx  raise.pyx  retconvert.pyx
tests/buffers/: buf_fmt.pyx  bufaccess.pyx  buffer.pyx  buffmt.pyx  mock_buffers.pxi  mockbuffers.pxi  userbuffer.pyx
tests/compile/: a_capi.pyx  altet1.h  altet1.pyx.BROKEN  argdefault.pyx  array_args.pyx  array_ptr_compat.pyx  array_to_ptr_arg.pyx  arrayargs.pyx  arrayptrcompat.pyx  ass2longlong.pyx  assert2.pyx  behnel4.pyx  belchenko1.pyx  belchenko2.h  belchenko2.pyx.BROKEN  branch_hints.pyx  buildenv.pyx  builtin.pyx  builtin_funcs.pyx  builtinfuncs.pyx  builtinlist.pyx  burton1.pyx.BROKEN  c_arg_def.pyx  c_assign.pyx  c_directives.pyx  c_for_from_loop.pyx  c_name_spec.pyx  c_num_op.pyx  c_struct_return.pyx  c_tuple_cimport.pxd  c_type_def.pyx  c_type_def_enum.pyx  c_type_def_struct.pyx  c_typedef_class.pyx  c_typedef_union.pyx  c_var_def.pyx  c_very_long_types.pyx  callingconvention.srctree  cargdef.pyx  carrdecl.pyx  (+211 more)
tests/errors/: break_outside_loop.pyx  bufaccess_noassignT444.pyx  buffertypedef_T117.pyx  cdef_func_decorators.pyx  cdef_func_syntax.pyx  cdef_in_pyclass.pyx  cdef_members_T517.pyx  cdef_syntax.pyx  cdefspecial.pyx  cfunc_directive_in_pyclass.pyx  cfuncptr.pyx  charptr_from_temp.pyx  cimport_attributes.pyx  cmethbasematch.pyx  const_decl_errors.pyx  const_decl_errors.pyx.BROKEN  continue_outside_loop.pyx  cpdef_syntax.pyx  cpp_bool.pyx  cpp_comparison.pyx  cpp_enum_redeclare.pyx  cpp_increment.pyx  cpp_no_auto_conversion.pyx  cpp_no_const_iterator_conversion.pyx  cpp_no_constructor.pyx  cpp_object_template.pyx  cpp_rvalue_reference_support.pyx  cppexc_non_extern.pyx  dataclass_e1.pyx  dataclass_e4.pyx  dataclass_e5.pyx  dataclass_e6.pyx  dataclass_w1.pyx  declareafteruse_T158.pyx  dotted_filenames.pyx  duplicate_const.pyx  e2_packedstruct_T290.pyx  e_addop.pyx  e_addressof.pyx  e_argdefault.pyx  (+141 more)
tests/memoryview/: bufaccess.h  cfunc_convert_with_memoryview.pyx  cfunc_convert_with_memoryview.pyx.BROKEN  compile_declarations.pyx  contig_check.pyx  cythonarray.pyx  error_declarations.pyx  extension_type_memoryview.pyx  mem_slice.pyx  memoryview.pxd  memoryview.pyx  memoryview_acq_count.srctree  memoryview_annotation_typing.py  memoryview_cache_builtins.srctree  memoryview_compare_type_pointers.srctree  memoryview_in_subclasses.pyx  memoryview_inline_pxd.srctree  memoryview_inplace_division.pyx  memoryview_no_binding_T3613.pyx  memoryview_pep484_typing.pyx  memoryviewattrs.pyx  memslice.pyx  memview_assignments.pyx  numpy_memory_view.pyx  numpy_memoryview.pyx  numpy_memoryview_readonly.pyx  parallel_refcounting_stress_test.pyx  relaxed_strides.pyx  transpose_refcount.pyx  view_return_errors.pyx
tests/pyximport/: pyximport_pyxbld.srctree
tests/run/: __debug__.srctree  __getattribute__.pyx  __getattribute_subclasses__.pyx  absolute_import.srctree  addloop.pyx  addop.pyx  addressof.pyx  all.pyx  always_allow_keywords_T295.pyx  and.pyx  annotate_html.pyx  annotation_typing.pyx  annotation_typing.pyx.BROKEN  anonymousenum.pyx  any.pyx  append.pyx  argdefault.pyx  (+751 more)
vscode/: DEV.md  README.md  cython.tmLanguage.json  language-configuration.json  package-lock.json  package.json
(+320 files in other folders)
