[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Cython"
description = "The Cython compiler for writing C extensions in the Python language."
authors = [
    { name = "Robert Bradshaw, Stefan Behnel, Dag Seljebotn, Greg Ewing, et al.", email = "cython-devel@python.org" }
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
]

[project.urls]
"Homepage" = "https://cython.org/"
"Documentation" = "https://cython.readthedocs.io/"
"Donate" = "https://cython.readthedocs.io/en/latest/src/donating.html"
"Source Code" = "https://github.com/cython/cython"
"Bug Tracker" = "https://github.com/cython/cython/issues"
"User Group" = "https://groups.google.com/g/cython-users"

[project.optional-dependencies]
dev = [
]

[tool.setuptools.packages.find]
include = ["Cython"]

[tool.ruff]
select = ["E", "F", "I", "UP"]  # https://beta.ruff.rs/docs/rules/
line-length = 120
target-version = "py312"

[tool.ruff.isort]

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--doctest-modules",
    "--doctest-glob=*.md"
]
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER ELLIPSIS"
