[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "Cython"
description = "The Cython compiler for writing C extensions in the Python language."
readme = "README.rst"
authors = [
  { name = "Robert Bradshaw, Stefan Behnel, Dag Seljebotn, Greg Ewing, et al.", email = "cython-devel@python.org" },
]
license = { text = "Apache-2.0" }
requires-python = ">= 3.7"
dependencies = []
dynamic = ["version"]

[project.urls]
"Homepage" = "https://cython.org/"
"Documentation" = "https://cython.readthedocs.io/"
"Donate" = "https://cython.readthedocs.io/en/latest/src/donating.html"
"Source Code" = "https://github.com/cython/cython"
"Bug Tracker" = "https://github.com/cython/cython/issues"
"User Group" = "https://groups.google.com/g/cython-users"

[tool.setuptools.dynamic]
version = { attr = "Cython.__version__" }

[tool.cibuildwheel]
build-verbosity = 2
skip = ["pp*", "cp36*"]
# test-command = "make test"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64", "i686"]
repair-wheel-command = "auditwheel repair --strip -w {dest_dir} {wheel}"

[tool.cibuildwheel.linux.environment]
CFLAGS = "-O3 -g0 -pipe -fPIC -march=core2"
AR = "gcc-ar"
NM = "gcc-nm"
RANLIB = "gcc-ranlib"

[[tool.cibuildwheel.overrides]]
select = "*aarch64"
environment = {CFLAGS = "-O3 -g0 -pipe -fPIC -march=armv8-a -mtune=cortex-a72", AR = "gcc-ar", NM = "gcc-nm", RANLIB = "gcc-ranlib" }

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86"]

[tool.cibuildwheel.macos]
# https://cibuildwheel.readthedocs.io/en/stable/faq/#what-to-provide suggests to provide
# x86_64 and one of universal2 or arm64 wheels.  x86_64 is still required by older pips,
# so additional arm64 wheels should suffice.
archs = ["x86_64", "arm64"]
